@@ -4,6 +4,8 @@ Release 0.8.0 - unreleased
 
   NEW FEATURES
 
+    TAJO-377: Implement concat function (Seungun Choe via jaehwa)
+
     TAJO-30: Parquet Integration. (David Chen via hyunsik)
 
     TAJO-353: Add Database support to Tajo. (hyunsik)
